# yohoho

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE.txt  Makefile  README.md  contact.html  index.html  index.html_  jquery.css  kinoserver.py  rain.css  robots.txt  site_index.html  sitemap.xml  snow.js  stars.css  tabs.css  yo.js
.github/workflows/: on_backend_update.yml  on_frontend_update.yml  purge_cache.yml
backend/: Dockerfile  pyproject.toml
backend/yohoho/: __main__.py  api.py  app.py  config.py  controller.py  data_types.py  gunicorn.conf.py  middleware.py
backend/yohoho/clients/: aloha.py  apicollaps.py  apivb.py  bazon.py  iframe_video.py  kinopoisk.py  videocdn.py  voidboost.py
frontend/: Dockerfile  nginx.conf
frontend/static/: contact.html  index.html  rain.css  site_index.html  snow.js  stars.css  tabs.css  yo.js
frontend/static/icons/: manifest.json
frontend/yohoho/: .env.development  .gitignore  index.html  package.json
frontend/yohoho/public/: manifest.json
frontend/yohoho/src/: App.vue  main.ts
frontend/yohoho/src/components/: Nav.vue
frontend/yohoho/src/router/: index.ts
frontend/yohoho/src/views/: 404.vue  AboutView.vue  MainView.vue
icons/: manifest.json
