[tool.poetry]
authors = ["yujin <root@yujin.io>"]
description = "Yohoho - Это аггрегатор плееров для онлайн просмотра кино по идентификатору Кинопоиска"
name = "yohoho"
packages = [
  {include = "yohoho", from = "."},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
environs = "^9.5.0"
gunicorn = "^21.2.0"
httpx = "^0.25.0"
litestar = "^2.1.0"
lxml = "^4.9.3"
python = "^3.11"
redis = "^5.0.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# ==== black ====
[tool.black]
include = '\.pyi?$'
line-length = 119
target-version = ['py311']

# ==== isort ====
[tool.isort]
known_first_party = [
  "yohoho",
]
line_length = 119
multi_line_output = 3
profile = "black"

# ==== mypy ====
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
implicit_reexport = false
python_version = "3.11"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
